# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
source/: CMakeLists.txt  actor.cpp  actor.h  main.cpp  shaderc.cmake
source/ext/: CMakeLists.txt
source/ext/glad/: CMakeLists.txt
source/ext/glad/include/glad/: egl.h  gl.h  glad.h  glx.h  vulkan.h  wgl.h
source/ext/glad/src/: gl.c  glad.c
source/ext/miniaudio/: CMakeLists.txt
source/ext/miniaudio/src/: miniaudio.cpp
source/rpg/: CMakeLists.txt  main.cpp
source/samples/: CMakeLists.txt  hello_box_renderer.cpp  test_audio.cpp  test_core.cpp  test_cpp.cpp  test_graph.cpp  test_opengl.cpp
source/source/: CMakeLists.txt
source/source/core2d/: bounding_box.cpp  bounding_box.h  geometric_functions.cpp  geometric_functions.h  vector2d.cpp  vector2d.h  vector2d_functions.cpp
source/src/: CMakeLists.txt
source/src/audio/: sound.cpp  sound.h  sources.cmake
source/src/core/: actor.cpp  actor.h  bounding_box.cpp  bounding_box.h  path.cpp  path.h  sources.cmake  vec2.cpp  vec2.h  vec2_functions.cpp  vec2_functions.h
source/src/core2d/: actor.cpp  actor.h  bounding_box.cpp  bounding_box.h  render.cpp  render.h  sources.cmake  vec2.h  vec2_functions.cpp  vec2_functions.h  vector2d_functions.h
source/src/inputs/: controller.cpp  controller.h  keyboard.cpp  keyboard.h  sources.cmake
source/src/render/: box.cpp  box.h  box_pipeline.cpp  box_pipeline.h  canvas.cpp  canvas.h  color.cpp  color.h  dmesh.cpp  dmesh.h  mesh.cpp  mesh.h  performance_monitor.cpp  performance_monitor.h  render.cpp  shaders_core.cpp  shaders_core.h  sources.cmake
source/src/rpgobjects/: menu.h  menuitem.h  object.h
source/tarea1/: CMakeLists.txt  main.cpp
